@@ -19,3 +19,17 @@
 5. 如果老生代满了，发生Full GC.
 
 
+==老生代垃圾回收器类型==
+* Serial GC  适合单核CPU，桌面应用
+* Parallel GC
+* Parallel Old GC
+* Concurrent Mask&Sweep GC(CMS)  适合多核服务器
+* Garbage First(G1) GC
+
+命令行参数指定GC算法: -XX:+UseConcMarkSweepGC
+
+老生代算法：标记-清除-紧凑（mark-sweep-compact）
+1. 标记有用的对象
+2. 删除没用的对象
+3. 把有用的对象排队放在一起，剩下完整的空闲区域。
+
